# v_slash

./: .env.example  .gitignore  README.md  pyproject.toml
slash/: __init__.py  config.py  main.py  reminder.py  validate.py
slash/agent/: errors.py  llm.py  loop.py  prompts.py  tools.py
slash/github/: client.py  context.py
slash/slack/: app.py
